// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HackerStatusComponent should set pulse color to green when input is "safe" (snapshot testing) 1`] = `
<ng-component
  appStatus={[Function String]}
>
  <np-hacker-status
    ng-reflect-status="safe"
  >
    <div
      class="status-pulse"
    >
      <span
        class="pulse green"
        ng-reflect-klass="pulse"
        ng-reflect-ng-class="green"
      />
      <span
        class="dot green"
        ng-reflect-klass="dot"
        ng-reflect-ng-class="green"
      />
    </div>
  </np-hacker-status>
</ng-component>
`;

exports[`HackerStatusComponent should set pulse color to red when input is "danger" (snapshot testing) 1`] = `
<ng-component
  appStatus={[Function String]}
>
  <np-hacker-status
    ng-reflect-status="danger"
  >
    <div
      class="status-pulse"
    >
      <span
        class="pulse red"
        ng-reflect-klass="pulse"
        ng-reflect-ng-class="red"
      />
      <span
        class="dot red"
        ng-reflect-klass="dot"
        ng-reflect-ng-class="red"
      />
    </div>
  </np-hacker-status>
</ng-component>
`;

exports[`HackerStatusComponent should set pulse color to yellow when input is "warning" (snapshot testing) 1`] = `
<ng-component
  appStatus={[Function String]}
>
  <np-hacker-status
    ng-reflect-status="warning"
  >
    <div
      class="status-pulse"
    >
      <span
        class="pulse yellow"
        ng-reflect-klass="pulse"
        ng-reflect-ng-class="yellow"
      />
      <span
        class="dot yellow"
        ng-reflect-klass="dot"
        ng-reflect-ng-class="yellow"
      />
    </div>
  </np-hacker-status>
</ng-component>
`;

exports[`HackerStatusComponent should set pulse color to yellow when input is undefined/null (snapshot testing) 1`] = `
<ng-component
  appStatus="null"
>
  <np-hacker-status>
    <div
      class="status-pulse"
    >
      <span
        class="pulse yellow"
        ng-reflect-klass="pulse"
        ng-reflect-ng-class="yellow"
      />
      <span
        class="dot yellow"
        ng-reflect-klass="dot"
        ng-reflect-ng-class="yellow"
      />
    </div>
  </np-hacker-status>
</ng-component>
`;
